<?xml version="1.0" encoding="utf-8"?>

<!--UI xml for Settings screen-->

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="SettingsBinding">

    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/settings_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icons_settings"
                    android:gravity="bottom"
                    android:text="@string/settings"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/location_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="50dp"
                android:checked="true"
                android:text="@string/settings_save_location_info"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/monsoon"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_lang"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/lang_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/monsoon"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/save_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/button_selector"
                android:padding="12dp"
                android:text="@string/common_signin_button_text" />

            <TextView
                android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:gravity="center"
                android:text="@string/dont_have_account"
                android:textSize="16dip" />

        </LinearLayout>
    </ScrollView>
</layout>